# FastDepends

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml  requirements.dev.txt  requirements.docs.txt  requirements.test.txt  sitemap.xml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: automerge.yml  documentation.yml  publish_coverage.yml  publish_pypi.yml  relator.yml  tests.yml
advanced/: index.html
advanced/starlette/: index.html
alternatives/: index.html
contributing/: index.html
docs/: mkdocs.yml  requirements.txt
docs/docs/: alternatives.md  contributing.md  index.md  usages.md  works.md
docs/docs/advanced/: index.md  starlette.md
docs/docs/tutorial/: annotated.md  classes.md  index.md  overrides.md  validations.md  yield.md
docs/docs_src/advanced/custom/: cast_arg.py  class_declaration.py  starlette.py  usage.py
docs/docs_src/home/: 1_async_tutor.py  1_sync_tutor.py
docs/docs_src/how-it-works/: works.py
docs/docs_src/tutorial_1/: 2_async.py
docs/docs_src/tutorial_1_quickstart/: 1_async.py  1_sync.py  2_async.py  2_sync.py
docs/docs_src/tutorial_2/: tutorial_1.py  tutorial_2.py  tutorial_4.py  tutorial_5.py
docs/docs_src/tutorial_2_classes/: tutorial_1.py  tutorial_2.py  tutorial_3.py  tutorial_4.py  tutorial_5.py
docs/docs_src/tutorial_3/: tutorial_1.py  tutorial_2.py
docs/docs_src/tutorial_4_annotated/: annotated_36.py  annotated_39.py  annotated_variants_36.py  annotated_variants_39.py  not_annotated.py
docs/docs_src/tutorial_5_overrides/: example.py  fixture.py
docs/docs_src/usages/: flask.py  starlette.py
fast_depends/: __about__.py  __init__.py  _compat.py  construct.py  exceptions.py  injector.py  model.py  provider.py  schema.py  types.py  usage.py  use.py  utils.py
fast_depends/core/: __init__.py  build.py  builder.py  model.py
fast_depends/dependencies/: __init__.py  model.py  provider.py
fast_depends/msgspec/: __init__.py  serializer.py
fast_depends/pydantic/: __init__.py  _compat.py  caster.py  schema.py  serializer.py
scripts/: lint.sh
search/: search_index.json
tests/: conftest.py  marks.py  test_locals.py  test_no_pydantic.py  test_no_serializer.py  test_overrides.py  test_params.py  test_prebuild.py  test_schema.py  test_utils.py
tests/async/: test_async.py  test_async_depends.py  test_cast.py  test_class.py  test_config.py  test_depends.py
tests/msgspec_specific/: test_encode.py
tests/pydantic_specific/: test_custom.py  test_encode.py  test_locals.py  test_prebuild.py  test_schema.py  wrapper.py
tests/pydantic_specific/async/: test_cast.py  test_config.py
tests/pydantic_specific/sync/: test_cast.py  test_config.py
tests/serializers/: params.py
tests/serializers/msgspec/: __init__.py  test_custom_type.py  test_encode.py
tests/serializers/pydantic/: __init__.py  test_encode.py  test_overrides.py
tests/sync/: test_cast.py  test_class.py  test_config.py  test_depends.py  test_sync.py  test_sync_depends.py
tests/test_typealiastype_depends/: __init__.py  test_typealiastype_depends.py
tutorial/: index.html
tutorial/annotated/: index.html
tutorial/classes/: index.html
tutorial/overrides/: index.html
tutorial/validations/: index.html
tutorial/yield/: index.html
usages/: index.html
works/: index.html
